--- a/public/style.css
+++ b/public/style.css
@@ -21,19 +21,32 @@ body {
 a {
     text-decoration: none;
 }
+.errMsg {
+    color: #22241f;
+    background-color: #ccc5b9;
+    font-size: 16px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    border: 2px solid #de541e;
+    text-shadow: none;
+    margin-top: 20px;
+    text-align: center;
+}
 
+/* 
 #app-wrapper {
     display: flex;
     flex-direction: column;
     height: 100vh;
-}
+} */
 
 header {
     background-color: var(--green);
-    height: 150px;
+    height: fit-content;
     padding: 20px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .logo {
@@ -42,12 +55,19 @@ header {
     filter: drop-shadow(5px 5px 3px #222);
 }
 
+header > .title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 header > nav {
     background-color: var(--darkGrey);
     display: flex;
+    align-items: center;
     gap: 20px;
     color: var(--beige);
-    height: fit-content;
+    /* height: fit-content; */
 }
 
 button {
@@ -67,14 +87,141 @@ button:hover {
     transition: 400ms ease-in-out;
 }
 
-.errMsg {
-    color: #22241f;
-    background-color: #ccc5b9;
-    font-size: 16px;
-    padding: 5px 10px;
+#homepage-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* height: 80vh; */
+}
+
+.welcome-bubble {
+    background-color: whitesmoke;
+    border-radius: 10px;
+    padding: 30px;
+    margin: 60px 0;
+    width: 50vw;
+    border: 1px solid lightgray;
+    display: flex;
+    width: 75%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    filter: drop-shadow(5px 5px 6px #222);
+}
+
+.welcome-bubble p {
+    font-size: 25px;
+    padding: 10px;
+}
+
+#all-plants-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    /* height: 500px; */
+}
+
+#plantsList-wrapper {
+    /* background-color: var(--lightGrey); */
+    /* text-shadow: 3px 3px 5px #000000; */
+    color: var(--darkBlue);
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.plants-container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 40px;
+}
+
+.items {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 80px;
+}
+
+.plant-card {
+    margin: 20px 20px 0 0;
+    max-width: 450px;
+    padding: 10px;
+    background-color: whitesmoke;
+    border: 1px solid var(--lightGrey);
     border-radius: 5px;
-    border: 2px solid #de541e;
-    text-shadow: none;
-    margin-top: 20px;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    position: relative;
+    filter: drop-shadow(5px 5px 3px #222);
+}
+
+.img-container {
+    height: 300px;
+    width: 300px;
+    display: flex;
+    margin-bottom: 10px;
+    border: 2px solid var(--lilac);
+    border-radius: 30px;
+    overflow: hidden;
+    justify-content: center;
+    filter: saturate(100%);
+    transition: filter 0.5s;
+    transition: transform 400ms;
+}
+
+.img-container:hover {
+    filter: saturate(20%);
+    transform: scale(1.05);
+}
+
+.img-container img {
+    /* max-height: 100%; */
+    object-fit: cover;
+    min-width: 100%;
+}
+
+.plant-card a {
+    color: var(--lilac);
+}
+
+button[name="wishlist"] {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 1;
+    padding: 0;
+    font-size: 35px;
+    text-shadow: 3px 3px 5px #000000;
+    background-color: transparent;
+    color: var(--lightGrey);
+    border: 0 solid transparent;
+}
+
+button[name="wishlist"]:hover {
+    color: darkred;
+}
+
+button[name="wishlist"]:visited {
+    border: 0 solid transparent;
+}
+button[name="wishlist"]:active {
+    border: 0 solid transparent;
+}
+
+#wishlist-sidebar {
+    background-color: rgba(255, 255, 255, 0.6);
+    padding: 10px;
+    border: 1px solid gray;
+    width: 200px;
+    height: 100%;
+    position: fixed;
+    right: 0;
+    top: 100px;
+    z-index: -1;
 }
