--- a/public/style.css
+++ b/public/style.css
@@ -145,13 +145,14 @@ button:hover {
     flex-wrap: wrap;
     justify-content: space-around;
     gap: 80px;
+    position: relative;
 }
 
-.plant-card {
-    margin: 20px 20px 0 0;
-    /* max-width: 450px; */
-    /* height: 450px; */
-    padding: 10px;
+#plant-card {
+    /* margin: 20px 20px 0 0; */
+    height: 442px;
+    width: 322px;
+    /* padding: 10px; */
     background-color: whitesmoke;
     border: 1px solid var(--lightGrey);
     border-radius: 5px;
@@ -159,15 +160,15 @@ button:hover {
     flex-direction: column;
     /* justify-content: flex-end; */
     position: relative;
-    filter: drop-shadow(5px 5px 3px #222);
-    transition: transform 400ms;
+    /* transition: transform 400ms; */
+    filter: drop-shadow(2px 2px 1px #222);
+    transition: 200ms ease-in-out;
 }
 
-.plant-card:hover {
-    transform: scale(1.05);
-}
-.plant-card a {
-    color: var(--lilac);
+#plant-card:hover {
+    filter: drop-shadow(5px 5px 3px #222);
+    cursor: cell;
+    /* transform: scale(1.05); */
 }
 
 .plants-container .img-container {
@@ -197,23 +198,21 @@ button:hover {
 
 #wishIcon {
     position: absolute;
-    top: 20px;
-    right: 20px;
-    z-index: 1;
+    top: 10px;
+    right: 15px;
+    z-index: 2;
     cursor: pointer;
     padding: 0;
     font-size: 35px;
-
     filter: drop-shadow(3px 3px 3px #222);
     background-color: transparent;
-
     border: 0 solid transparent;
-    transition: 300ms ease-in-out;
+    transition: 200ms ease-in-out;
     /* align-self: center; */
 }
 
-#wishIcon:hover {
-    transform: scale(1.1);
+#wishIcon:active {
+    transform: scale(0.9);
     /* transform: rotateY(-180deg); */
     /* filter: drop-shadow(-3px 3px 3px #222); */
 }
@@ -226,6 +225,60 @@ button:hover {
 .wishIconInactive {
     color: var(--lightGrey);
     /* transition: 800ms ease-in-out; */
+}
+
+.card-lower-container {
+    /* border: 1px solid green; */
+    color: var(--lilac);
+    padding: 0 15px;
+
+    /* text-shadow: 2px 2px 5px #222; */
+}
+
+#frontSide,
+#backSide {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    backface-visibility: hidden;
+
+    /* transform-style: preserve-3d;
+    transition: 0.6s; */
+}
+
+#backSide {
+    border: 1px solid green;
+    height: 418px;
+    width: 300px;
+
+    transform: scale(0.01);
+    filter: alpha(opacity=0);
+    opacity: 0;
+    /* z-index: 1; */
+}
+
+.flipped #frontSide {
+    transform: scale(0.01);
+    filter: alpha(opacity=0);
+    opacity: 0;
+}
+
+.flipped #backSide {
+    transform: scale(1);
+    filter: alpha(opacity=100);
+    opacity: 1;
+    /* z-index: 5; */
+}
+
+.frontInfo {
+    /* border: 1px solid red; */
+    height: 60px;
+    color: black;
+    display: flex;
+    gap: 30px;
+    /* justify-content: space-between; */
+    align-items: center;
+    /* padding: 5px 10px; */
 }
 
 #wishlist-sidebar {
@@ -258,16 +311,5 @@ button:hover {
     align-items: center;
     justify-items: center;
     margin-bottom: 10px;
-    gap: 20px;
-}
-
-.frontInfo {
-    /* border: 1px solid red; */
-    height: 60px;
-    color: black;
-    display: flex;
-    gap: 30px;
-    /* justify-content: space-between; */
-    align-items: center;
-    padding: 5px 10px;
+    gap: 15px;
 }
