--- a/public/style.css
+++ b/public/style.css
@@ -167,13 +167,13 @@ button:hover {
 
 #plant-card:hover {
     filter: drop-shadow(5px 5px 3px #222);
-    cursor: cell;
+    cursor: grab;
     /* transform: scale(1.05); */
 }
 
 .plants-container .img-container {
-    max-height: 300px;
-    max-width: 300px;
+    height: 300px;
+    width: 300px;
     display: flex;
     margin-bottom: 10px;
     border: 2px solid var(--lilac);
@@ -244,11 +244,10 @@ button:hover {
     position: absolute;
     top: 10px;
     left: 10px;
+    transition: 0.6s;
     /* backface-visibility: hidden; */
-
     /* transform-style: preserve-3d;
      */
-    transition: 0.6s;
 }
 
 #frontSide {
@@ -271,11 +270,11 @@ button:hover {
 .flagHidden#frontSide,
 .flagHidden#backSide {
     z-index: -1;
+    opacity: 0;
     /* background-color: var(--darkBlue);
     border: 10px solid red; */
     /* filter: alpha(opacity=0); */
     /* filter: alpha(opacity=0); */
-    opacity: 0;
 }
 
 .frontInfo {
@@ -283,10 +282,39 @@ button:hover {
     height: 60px;
     color: black;
     display: flex;
-    gap: 30px;
-    /* justify-content: space-between; */
+    /* gap: 30px; */
+    justify-content: space-between;
     align-items: center;
     /* padding: 5px 10px; */
+}
+
+.plant-type {
+    /* border: 1px solid green; */
+    width: 160px;
+    display: flex;
+}
+
+.plant-type > #card-icon {
+    filter: opacity(20%);
+    /* background-color: var(--darkBlue); */
+}
+
+.pet-air {
+    /* border: 1px solid blue; */
+    width: 80px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+#card-icon {
+    /* border: 1px dashed red; */
+    height: 35px;
+    margin: 0 2px;
+}
+
+#card-icon.icon-highlight {
+    filter: opacity(100%);
+    /* background-color: red; */
 }
 
 #wishlist-sidebar {
