--- a/public/style.css
+++ b/public/style.css
@@ -91,28 +91,31 @@ button:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    /* height: 80vh; */
+    /* justify-content: space-between; */
+    height: 85vh;
+    /* gap: 50px; */
 }
 
 .welcome-bubble {
     background-color: whitesmoke;
     border-radius: 10px;
     padding: 30px;
-    margin: 60px 0;
-    width: 50vw;
+    margin-bottom: 100px;
+    /* width: 50vw; */
     border: 1px solid lightgray;
     display: flex;
-    width: 75%;
+    width: 95%;
+    min-height: 400px;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
+    /* gap: 50px; */
     filter: drop-shadow(5px 5px 6px #222);
 }
 
 .welcome-bubble p {
     font-size: 25px;
-    padding: 10px;
+    /* padding: 10px; */
 }
 
 #all-plants-wrapper {
@@ -120,7 +123,7 @@ button:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 30px;
+    /* gap: 130px; */
     /* height: 500px; */
 }
 
