--- a/public/style.css
+++ b/public/style.css
@@ -174,7 +174,7 @@ button:hover {
     /* transform: scale(1.05); */
 }
 
-.plants-container .img-container {
+#plant-card .img-container {
     height: 300px;
     width: 300px;
     display: flex;
