--- a/public/style.css
+++ b/public/style.css
@@ -440,7 +440,7 @@ button:hover {
 
 #wishlist-sidebar {
     position: fixed;
-    right: 0;
+    /* right: 0; */
     top: 50px;
     z-index: 10;
     background-color: whitesmoke;
@@ -451,6 +451,7 @@ button:hover {
     width: 250px;
     height: fit-content;
     filter: drop-shadow(2px 2px 10px #222);
+    transition: 1200ms ease;
 }
 
 #wishlist-sidebar .img-container {
@@ -484,15 +485,22 @@ button:hover {
 }
 
 .sidebar-visible {
-    visibility: visible;
-    opacity: 0.95;
-    transition: 500ms;
+    /* visibility: visible;
+    opacity: 0.95; */
+    /* transition: 300ms; */
+    /* position: fixed; */
+    right: -250px;
+    /* top: 50px; */
+    /* transition: 300ms ease-in-out; */
+    transform: translateX(-100%);
 }
 
 .sidebar-hidden {
-    visibility: hidden;
-    opacity: 0;
-    transition: 300ms;
+    /* visibility: hidden;
+    /* transition: 1200ms; */
+    opacity: 0.5;
+    left: 100%;
+    /* transition: 100ms ease-out; */
 }
 
 #back-card-top {
