--- a/public/style.css
+++ b/public/style.css
@@ -451,7 +451,9 @@ button:hover {
     width: 250px;
     height: fit-content;
     filter: drop-shadow(2px 2px 10px #222);
-    transition: 1200ms ease;
+    /* transition: transform 1200ms ease, opacity 2000ms ease; */
+
+    /* transition-delay: 3500ms; */
 }
 
 #wishlist-sidebar .img-container {
@@ -493,6 +495,7 @@ button:hover {
     /* top: 50px; */
     /* transition: 300ms ease-in-out; */
     transform: translateX(-100%);
+    transition: 500ms ease;
 }
 
 .sidebar-hidden {
@@ -500,6 +503,8 @@ button:hover {
     /* transition: 1200ms; */
     opacity: 0.5;
     left: 100%;
+    /* transition: 1700ms ease; */
+    transition: transform 1700ms ease, opacity 2000ms ease-in;
     /* transition: 100ms ease-out; */
 }
 
