--- a/public/style.css
+++ b/public/style.css
@@ -140,20 +140,20 @@ button:hover {
 }
 
 .welcome-bubble {
-    background-color: whitesmoke;
-    border-radius: 10px;
+    /* background-color: whitesmoke; */
+    background-image: url("/hero_photo.png");
+    border-radius: 30px;
     padding: 30px;
     margin-bottom: 50px;
     /* width: 50vw; */
-    border: 1px solid lightgray;
+    /* border: 1px solid lightgray; */
     display: flex;
-    width: 85%;
+    width: 900px;
     min-height: 400px;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     /* gap: 50px; */
-    filter: drop-shadow(5px 5px 6px #222);
 }
 
 .welcome-bubble h1 {
@@ -164,6 +164,10 @@ button:hover {
 .welcome-bubble p {
     font-size: 25px;
     text-align: center;
+    text-shadow: 3px 3px 3px var(--beige);
+}
+
+.homepage-btn {
 }
 
 #all-plants-wrapper,
@@ -174,6 +178,26 @@ button:hover {
 
 #all-plants-wrapper {
     align-items: center;
+}
+
+#all-plants-wrapper p {
+    font-size: 18px;
+    padding-bottom: 10px;
+}
+
+.arrow,
+.wishlist-backbtn,
+.advisor-nav {
+    font-size: 50px;
+    cursor: pointer;
+    color: var(--redBrown);
+    transition: 400ms;
+}
+
+.arrow:hover,
+.wishlist-backbtn:hover,
+.advisor-nav:hover {
+    color: var(--muteLime);
 }
 
 #plantsList-wrapper,
@@ -321,6 +345,7 @@ button:hover {
     font-size: 22px;
     padding: 3px 0px;
 }
+
 #frontSide,
 #backSide {
     position: absolute;
@@ -540,28 +565,18 @@ button:hover {
 .emptyWishlist {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     height: 300px;
     color: var(--darkPurple);
 }
 
-.emptyWishlist .btn {
-    background-color: var(--lime);
-    color: var(--redBrown);
-    padding: 5px 15px;
-    border-radius: 20px;
-    transition: 400ms;
+.emptyWishlist h1 {
+    padding-bottom: 50px;
 }
 
-.emptyWishlist .btn:hover {
-    background-color: var(--redBrown);
-    color: var(--lime);
-}
-
-.emptyWishlist .btn:active {
-    position: relative;
-    top: 1px;
+.emptyWishlist h3 {
+    padding-bottom: 10px;
 }
 
 /* ~~~~~~~~~~~~ ADVISOR ~~~~~~~~~~~~~ */
@@ -639,14 +654,15 @@ button:hover {
 
     /* align-self: flex-end; */
 }
-.advisor-nav {
+
+.homepage-btn {
     min-width: 150px;
     padding: 15px 40px;
     /* margin: 0px 250px; */
 }
 
 .results > .advisor-nav {
-    width: 100px;
+    /* width: 100px; */
     /* height: 50px; */
     /* color: red; */
 }
@@ -692,4 +708,26 @@ button:hover {
 
 .question-box .far:hover {
     opacity: 1;
+}
+
+.show-results {
+    cursor: pointer;
+    border-radius: 20px;
+    background-color: var(--redBrown);
+    padding: 5px 15px;
+
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.show-results > p {
+    font-size: 30px;
+    /* color: var(--redBrown); */
+    color: var(--beige);
+}
+
+.show-results > .advisor-nav {
+    color: var(--beige);
 }
