--- a/public/style.css
+++ b/public/style.css
@@ -596,6 +596,7 @@ button:hover {
     height: 500px;
     width: 1100px;
     padding: 30px;
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
 
@@ -675,6 +676,8 @@ button:hover {
 .img-container.loading {
     height: 500px;
     overflow: hidden;
+    filter: drop-shadow(5px 5px 6px #222);
+    border-radius: 10px;
     /* border: 5px solid red; */
 }
 
@@ -720,14 +723,20 @@ button:hover {
     justify-items: center;
     align-items: center;
     gap: 15px;
+    transition: 300ms;
 }
 
 .show-results > p {
     font-size: 30px;
     /* color: var(--redBrown); */
     color: var(--beige);
+    margin-top: 3px;
 }
 
 .show-results > .advisor-nav {
     color: var(--beige);
+}
+
+.show-results:hover {
+    background-color: var(--muteLime);
 }
