--- a/public/style.css
+++ b/public/style.css
@@ -148,7 +148,7 @@ button:hover {
     /* width: 50vw; */
     /* border: 1px solid lightgray; */
     width: 900px;
-    min-height: 400px;
+    height: 400px;
 
     display: grid;
     grid-template-rows: 1fr 1fr 3fr 1fr;
@@ -680,18 +680,20 @@ button:hover {
 }
 
 #advisor-icon {
-    filter: opacity(35%);
+    filter: opacity(50%);
     height: 100px;
     cursor: pointer;
     transition: 300ms;
 }
 
 #advisor-icon:hover {
-    filter: opacity(75%);
+    transform: scale(1.1);
 }
 
 #advisor-icon.icon-highlight {
     filter: opacity(100%);
+    filter: invert(25%) sepia(18%) saturate(4913%) hue-rotate(300deg)
+        brightness(95%) contrast(93%);
 }
 
 .question-box .far {
